@@ -5,5 +5,7 @@ MANIFEST.SKIP
 MANIFEST.bak
 Makefile.PL
 README
-bench.pl
+tie-cache-bench.pl
 test.pl
+META.yml                                 Module YAML meta-data (added by MakeMaker)
+META.json                                Module JSON meta-data (added by MakeMaker)
